--- a/index.html
+++ b/index.html
@@ -84,33 +84,15 @@
                     <H1>QuakeChat</H1>
                 </div>
             </a>
-            <div id="mobile_toggle_2" class="fr-widget fr-navigation-toggle fr_mobile_toggle_2" aria-hidden="true">
-                <div id="hamburger_icon_2" class="fr-widget fr-svg fr_hamburger_icon_2">
-                    <div class="fr-svg-inner">
-                        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="0 0 73.2 61.6" xml:space="preserve"><path d="M4.2 8.6h64.7c2.3 0 4.2-1.9 4.2-4.3C73.2 1.9 71.3 0 68.9 0H4.2C1.9 0 0 1.9 0 4.3 0 6.7 1.9 8.6 4.2 8.6zM68.9 26.5H4.2C1.9 26.5 0 28.4 0 30.8c0 2.4 1.9 4.3 4.2 4.3h64.7c2.3 0 4.2-1.9 4.2-4.3C73.2 28.4 71.3 26.5 68.9 26.5zM68.9 53H4.2C1.9 53 0 54.9 0 57.3c0 2.4 1.9 4.3 4.2 4.3h64.7c2.3 0 4.2-1.9 4.2-4.3C73.2 54.9 71.3 53 68.9 53z"></path></svg>
-                    </div>
-                </div>
-            </div>
-            <div id="items_2" class="fr-widget fr-container fr_items_2 x-nav-collapse x-nav-collapse-0 closed"
-                 style="transition: max-height 284ms; position: relative;" aria-hidden="false">
-                <a id="text01" class="fr-widget fr-text fr-wf fr_nav_item_bright_right_center fr_text01 fr-link">
-                    <div class="fr-text">Home</div>
-                </a><a id="text02" class="fr-widget fr-text fr-wf fr_nav_item_bright_right_center fr_text02 fr-link">
-                <div class="fr-text">News</div>
-            </a><a id="text03_2" class="fr-widget fr-text fr-wf fr_nav_item_bright_right_center fr_text03_2 fr-link">
-                <div class="fr-text">Quakes</div>
-            </a><a id="sign_up_button_2" class="fr-widget fr-text fr-wf fr_button-1 fr_sign_up_button_2 fr-link">
-                <div class="fr-text">Sign up</div>
-            </a>
-            </div>
+
         </div>
     </div>
     <div id="hero_with_bg" class="fr-widget fr-container fr_hero_with_bg">
         <div id="hd3_content" class="fr-widget fr-container fr_hd3_content">
             <div id="text_25" class="fr-widget fr-text fr-wf fr_text_bright_left fr_text_25">
                 <div class="fr-text">
-                    <h1>You don't need a silver fork to eat good food</h1>
-                    <p>Let's have a chat to discuss if we're the right fit for you</p>
+                    <h1>Your earthquake good tool</h1>
+                    <p>Let's have a chat to share and help each other</p>
                 </div>
             </div>
             <a id="text_133" class="fr-widget fr-text fr-wf fr_button fr_text_133 fr-link"
@@ -159,15 +141,15 @@
             </div>
 
             <div class="fr-widget fr-grid fr_grid_14">
-                <div id="" class="fr-widget fr-container fr_image_container_14">
-                    <div id="" class="fr-widget fr-svg fr_volume_up_icon_14">
+                <div  class="fr-widget fr-container fr_image_container_14">
+                    <div  class="fr-widget fr-svg fr_volume_up_icon_14">
                         <div class="fr-svg-inner">
                             <i class="fa fa-map-marker fa-3x" aria-hidden="true"></i>
 
                         </div>
                     </div>
                 </div>
-                <div id="" class="fr-widget fr-text fr-wf fr_text_194">
+                <div  class="fr-widget fr-text fr-wf fr_text_194">
                     <div class="fr-text">
                         <h5>Quake detail</h5>
                         <p>- Quake location on the map</p>
@@ -237,7 +219,7 @@
             <div id="f4_container_one" class="fr-widget fr-container fr_f4_container_one">
                 <div id="wf_soc_icons_4" class="fr-widget fr-grid fr_wf_soc_icons_4">
                     <div id="wf_twitter_3" class="fr-widget fr-container fr_wf_twitter_3">
-                        <a id="svg_27"
+                        <a
                            class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
                            href="http://www.facebook.com/FroontApp" target="_blank">
                             <div class="fr-svg-inner">
@@ -247,7 +229,7 @@
                     </div>
 
                     <div id="wf_facebook_3" class="fr-widget fr-container fr_wf_facebook_3">
-                        <a id="svg_27"
+                        <a
                            class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
                            href="http://www.facebook.com/FroontApp" target="_blank">
                             <div class="fr-svg-inner">
@@ -257,7 +239,7 @@
                     </div>
 
                     <div id="wf_youtube_3" class="fr-widget fr-container fr_wf_youtube_3">
-                        <a id="svg_27"
+                        <a
                            class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
                            href="http://www.facebook.com/FroontApp" target="_blank">
                             <div class="fr-svg-inner">
@@ -314,9 +296,9 @@
             <div id="get_the_app" class="fr-widget fr-text fr-wf fr_text_dark_left fr_get_the_app">
                 <div class="fr-text">
                     <h4>Get The App</h4>
-                    <p>78 East 88th Street, Suite 209<br> New York, NY, 10221<br> 1-347-567-8670
+                    <p><a href="https://itunes.apple.com/cn/app/growth/id1078807522?l=zh&amp;ls=1&amp;mt=8"><img src="./files/apple.png" width="180" alt="Get it from Apple Store" style="max-width:100%;"></a>
                     </p>
-                    <p>info@strarup.com</p>
+                    <p>pigflymoon@gmai.com</p>
                 </div>
             </div>
         </div>
@@ -329,7 +311,7 @@
 
             <div id="wf_soc_icons" class="fr-widget fr-grid fr_wf_soc_icons">
                 <div id="wf_twitter" class="fr-widget fr-container fr_wf_twitter">
-                    <a id="svg_27"
+                    <a
                        class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
                        href="http://www.facebook.com/FroontApp" target="_blank">
                         <div class="fr-svg-inner">
@@ -339,7 +321,7 @@
                 </div>
 
                 <div id="wf_facebook" class="fr-widget fr-container fr_wf_facebook">
-                    <a id="svg_27"
+                    <a
                        class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
                        href="http://www.facebook.com/FroontApp" target="_blank">
                         <div class="fr-svg-inner">
@@ -348,8 +330,8 @@
                     </a>
                 </div>
 
-                <div id="wf_youtube" class="fr-widget fr-container fr_wf_youtube">
-                    <a id="svg_27"
+                <div  class="fr-widget fr-container fr_wf_youtube">
+                    <a
                        class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
                        href="http://www.facebook.com/FroontApp" target="_blank">
                         <div class="fr-svg-inner">
@@ -357,8 +339,8 @@
                         </div>
                     </a>
                 </div>
-                <div id="wf_youtube" class="fr-widget fr-container fr_wf_youtube">
-                    <a id="svg_27"
+                <div  class="fr-widget fr-container fr_wf_youtube">
+                    <a
                        class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
                        href="http://www.facebook.com/FroontApp" target="_blank">
                         <div class="fr-svg-inner">
@@ -378,7 +360,7 @@
     <div class="fr-widget fr-container">
         <div class="fr-widget fr-text fr-wf fr-made-with-froont">
             <a href="http://froont.com/" class="fr-text" target="_blank">
-                MADE WITH <span class="heart">♥</span> AND <b>FROONT</b>
+                MADE WITH <span class="heart">♥</span> AND <b>QUAKECHAT</b>
             </a>
         </div>
     </div>
