--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
     <div id="nav_with_logo" class="fr-widget fr-container fr_nav_with_logo">
         <div id="navigation_dark_with_logo_2"
              class="fr-widget fr-navigation fr-navigation-active fr_navigation_dark_with_logo_2">
-            <a id="logo_2" class="fr-widget fr-svg fr_logo_2 fr-link" href="https://froont.com/">
+            <a id="logo_2" class="fr-widget fr-svg fr_logo_2 fr-link" href="http://quakechat.kiwiinfo.com/">
                 <div class="fr-svg-inner">
-                    <!--<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="0 0 279.3 56" enable-background="new 0 0 279.333 56" xml:space="preserve"><path d="M2 3.3h32.3v7.8H10.9v13.8h22.1v7.6H10.9v21.2H2V3.3zM40.5 3.3H58c9.4 0 18.5 3.8 18.5 14.5 0 7.3-4.5 12-11.5 13.6l13.4 22.4H67.6L56 32.3h-6.5v21.4h-8.9V3.3zM56.7 25c5 0 10.8-1.2 10.8-7.3 0-5.5-5.4-6.8-10-6.8h-8.1v14.2H56.7zM159.3 2c-12.6 0-22.5 6.8-25.7 18.1C130.4 8.8 120.5 2 107.7 2c-15.4 0-26.8 10.2-26.8 26.4 0 15.7 11.4 26.6 26.8 26.6 12.8 0 22.7-7.3 25.9-18.5C136.8 47.7 146.7 55 159.3 55c15.6 0 27-10.9 27-26.6C186.3 12.2 174.9 2 159.3 2zM107.7 46.9c-10.2 0-17.2-7.8-17.2-18.6 0-10.4 6.9-18.4 17.2-18.4 10.4 0 17.3 8 17.3 18.4C125 39.1 118 46.9 107.7 46.9zM159.4 46.9c-10.2 0-17.2-7.8-17.2-18.6 0-10.4 6.9-18.4 17.2-18.4 10.4 0 17.3 8 17.3 18.4C176.6 39.1 169.6 46.9 159.4 46.9zM189.6 3.3h11.8l23.3 37.8h0.1V3.3h8.9v50.4h-11.3L198.6 14.8h-0.1v39h-8.9V3.3zM253.7 11.1h-15.4V3.3H278v7.8h-15.3v42.6h-8.9V11.1z"></path></svg>-->
                     <H1>QuakeChat</H1>
                 </div>
             </a>
@@ -96,7 +95,7 @@
                 </div>
             </div>
             <a id="text_133" class="fr-widget fr-text fr-wf fr_button fr_text_133 fr-link"
-               href="mailto:hello@froont.com">
+               href="https://itunes.apple.com/cn/app/growth/id1078807522?l=zh&ls=1&mt=8">
                 <div class="fr-text">
                     Download App
                 </div>
