--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <link rel="stylesheet" href="./files/style.19f5365.css">
     <link rel="stylesheet" href="./files/style.css">
     <link rel="stylesheet" href="./files/font-awesome/css/font-awesome.min.css">
-    <script type="text/javascript" src="./files/footer.19f5365.js"></script>
+    <script type="text/javascript" src="https://pig2moon.github.io/files/footer.19f5365.js"></script>
+
+    <link rel="shortcut icon" type="image/x-icon" href="http://quakechat.kiwiinfo.com/files/favicon.ico">
+    <link rel="apple-touch-icon" href="http://quakechat.kiwiinfo.com/files/favicon.ico">
     <script type="text/javascript">
         var fonts = {
             "Montserrat": {
@@ -65,7 +68,7 @@
     <script type="text/javascript" src="./files/js-fonts.19f5365.js"></script>
 
 
-    <link rel="shortcut icon" type="image/x-icon" href="http://froont.com/favicon.ico?v=2">
+    <link rel="shortcut icon" type="image/x-icon" href="./files/app.ico">
     <link rel="apple-touch-icon" href="http://froont.com/favicon-152.png">
     <meta name="msapplication-TileColor" content="#3E3ED6">
     <meta name="msapplication-TileImage" content="/favicon-144.png">
