--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <script type="text/javascript" src="./files/js-fonts.19f5365.js"></script>
 
 
-    <link rel="shortcut icon" type="image/x-icon" href="./files/app.ico">
-    <link rel="apple-touch-icon" href="http://froont.com/favicon-152.png">
+    <!--<link rel="shortcut icon" type="image/x-icon" href="./files/app.ico">-->
+    <!--<link rel="apple-touch-icon" href="http://froont.com/favicon-152.png">-->
     <meta name="msapplication-TileColor" content="#3E3ED6">
     <meta name="msapplication-TileImage" content="/favicon-144.png">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
