--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </div>
                 <div id="text_193" class="fr-widget fr-text fr-wf fr_text_193">
                     <div class="fr-text">
-                        <h5>Quakes list</h5>
+                        <h4>Quakes list</h4>
                         <p>Quakes list by the most recent earthquakes.</p>
                         <p>—Quakes list by the most recent earthquakes.Filter quakes list by different magnitude</p>
                     </div>
@@ -120,7 +120,7 @@
                 </div>
                 <div id="text_194" class="fr-widget fr-text fr-wf fr_text_194">
                     <div class="fr-text">
-                        <h5>Quakes Map</h5>
+                        <h4>Quakes Map</h4>
                         <p>An interative map view showing reported earthquakes by different magnitudes.</p>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                 </div>
                 <div  class="fr-widget fr-text fr-wf fr_text_194">
                     <div class="fr-text">
-                        <h5>Quake detail</h5>
+                        <h4>Quake detail</h4>
                         <p>- Quake location on the map</p>
                         <p>- Time,location,depth,latitude and longitude</p>
                     </div>
@@ -156,9 +156,9 @@
 
                 <div id="text_195" class="fr-widget fr-text fr-wf fr_text_195">
                     <div class="fr-text">
-                        <h5>Chat room</h5>
-                        <p>quick sign-up with no SMS verification required!</p>
-                        <p>- People share quake information,Enjoy group chat with your friends. </p>
+                        <h4>Chat room</h4>
+                        <p>Quick sign-up with no SMS verification required!</p>
+                        <p>- People share quake information,Enjoy group chat with your friends </p>
                         <p>- Exchange updated quake information and share it </p>
                         <p>- Find out where is the safe place when earthquake comes</p>
                         <p>- Broadcast messages to others and Help each other </p>
@@ -181,7 +181,7 @@
 
                 <div id="text_196" class="fr-widget fr-text fr-wf fr_text_196">
                     <div class="fr-text">
-                        <h5>Notification</h5>
+                        <h4>Notification</h4>
                         <p>Get notification by magnitude</p>
                     </div>
                 </div>
@@ -322,15 +322,6 @@
                        href="http://www.facebook.com/FroontApp" target="_blank">
                         <div class="fr-svg-inner">
                             <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
-                        </div>
-                    </a>
-                </div>
-                <div  class="fr-widget fr-container fr_wf_youtube">
-                    <a
-                       class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                       href="http://www.facebook.com/FroontApp" target="_blank">
-                        <div class="fr-svg-inner">
-                            <i class="fa fa-github fa-2x" aria-hidden="true"></i>
                         </div>
                     </a>
                 </div>
