--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
             </div>
 
             <div class="fr-widget fr-grid fr_grid_14">
-                <div  class="fr-widget fr-container fr_image_container_14">
-                    <div  class="fr-widget fr-svg fr_volume_up_icon_14">
+                <div class="fr-widget fr-container fr_image_container_14">
+                    <div class="fr-widget fr-svg fr_volume_up_icon_14">
                         <div class="fr-svg-inner">
                             <i class="fa fa-map-marker fa-3x" aria-hidden="true"></i>
 
                         </div>
                     </div>
                 </div>
-                <div  class="fr-widget fr-text fr-wf fr_text_194">
+                <div class="fr-widget fr-text fr-wf fr_text_194">
                     <div class="fr-text">
                         <h4>Quake detail</h4>
                         <p>- Quake location on the map</p>
@@ -206,8 +206,8 @@
                 <div id="wf_soc_icons_4" class="fr-widget fr-grid fr_wf_soc_icons_4">
                     <div id="wf_twitter_3" class="fr-widget fr-container fr_wf_twitter_3">
                         <a
-                           class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                           href="http://www.facebook.com/FroontApp" target="_blank">
+                                class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                                href="http://www.facebook.com/FroontApp" target="_blank">
                             <div class="fr-svg-inner">
                                 <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
                             </div>
@@ -216,8 +216,8 @@
 
                     <div id="wf_facebook_3" class="fr-widget fr-container fr_wf_facebook_3">
                         <a
-                           class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                           href="http://www.facebook.com/FroontApp" target="_blank">
+                                class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                                href="http://www.facebook.com/FroontApp" target="_blank">
                             <div class="fr-svg-inner">
                                 <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
                             </div>
@@ -226,8 +226,8 @@
 
                     <div id="wf_youtube_3" class="fr-widget fr-container fr_wf_youtube_3">
                         <a
-                           class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                           href="http://www.facebook.com/FroontApp" target="_blank">
+                                class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                                href="http://www.facebook.com/FroontApp" target="_blank">
                             <div class="fr-svg-inner">
                                 <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
                             </div>
@@ -271,7 +271,6 @@
             </div>
 
 
-
         </div>
     </div>
 </div>
@@ -282,13 +281,16 @@
             <div id="get_the_app" class="fr-widget fr-text fr-wf fr_text_dark_left fr_get_the_app">
                 <div class="fr-text">
                     <h4>Get The App</h4>
-                    <p><a href="https://itunes.apple.com/cn/app/growth/id1078807522?l=zh&amp;ls=1&amp;mt=8"><img src="./files/apple.png" width="180" alt="Get it from Apple Store" style="max-width:100%;"></a>
+                    <p><a href="https://itunes.apple.com/cn/app/growth/id1078807522?l=zh&amp;ls=1&amp;mt=8"><img
+                            src="./files/apple.png" width="180" alt="Get it from Apple Store"
+                            style="max-width:100%;"></a>
                     </p>
                     <p>pigflymoon@gmai.com</p>
                 </div>
             </div>
         </div>
         <div id="wf_container_two" class="fr-widget fr-container fr_wf_container_two">
+
             <div id="wf_follow_us" class="fr-widget fr-text fr-wf fr_text_dark_right fr_wf_follow_us">
                 <div class="fr-text">
                     <h4>Follow Us!</h4>
@@ -298,8 +300,8 @@
             <div id="wf_soc_icons" class="fr-widget fr-grid fr_wf_soc_icons">
                 <div id="wf_twitter" class="fr-widget fr-container fr_wf_twitter">
                     <a
-                       class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                       href="http://www.facebook.com/FroontApp" target="_blank">
+                            class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                            href="http://www.facebook.com/FroontApp" target="_blank">
                         <div class="fr-svg-inner">
                             <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
                         </div>
@@ -308,18 +310,18 @@
 
                 <div id="wf_facebook" class="fr-widget fr-container fr_wf_facebook">
                     <a
-                       class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                       href="http://www.facebook.com/FroontApp" target="_blank">
+                            class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                            href="http://www.facebook.com/FroontApp" target="_blank">
                         <div class="fr-svg-inner">
                             <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
                         </div>
                     </a>
                 </div>
 
-                <div  class="fr-widget fr-container fr_wf_youtube">
+                <div class="fr-widget fr-container fr_wf_youtube">
                     <a
-                       class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                       href="http://www.facebook.com/FroontApp" target="_blank">
+                            class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                            href="http://www.facebook.com/FroontApp" target="_blank">
                         <div class="fr-svg-inner">
                             <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
                         </div>
@@ -328,20 +330,15 @@
             </div>
         </div>
     </div>
-</div>
+    <div>
 
-<div id="container" class="fr-widget fr-container fr_container">
-</div>
-</div>
-<div class="fr-copyright-footer">
-    <div class="fr-widget fr-container">
-        <div class="fr-widget fr-text fr-wf fr-made-with-froont">
-            <a href="http://froont.com/" class="fr-text" target="_blank">
-                MADE WITH <span class="heart">♥</span> AND <b>QUAKECHAT</b>
-            </a>
+        <div class="links">
+            <ul>
+                <li><a href="http://quakechat.kiwiinfo.com/files/term-of-use">Term of use</a></li>
+                <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+            </ul>
         </div>
     </div>
-    <div class="fr-bottom-em-spacer"></div>
 </div>
 
 
