--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -198,7 +198,7 @@
             <div id="get_the_app" class="fr-widget fr-text fr-wf fr_text_dark_left fr_get_the_app">
                 <div class="fr-text">
                     <h4>Get The App</h4>
-                    <p><a href="https://itunes.apple.com/cn/app/growth/id1078807522?l=zh&amp;ls=1&amp;mt=8"><img
+                    <p><a href=""><img
                             src="./files/apple.png" width="180" alt="Get it from Apple Store"
                             style="max-width:100%;"></a>
                     </p>
@@ -217,7 +217,7 @@
                 <div id="wf_twitter" class="fr-widget fr-container fr_wf_twitter">
                     <a
                             class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                            href="http://www.facebook.com/FroontApp" target="_blank">
+                            href="" target="_blank">
                         <div class="fr-svg-inner">
                             <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
                         </div>
@@ -227,7 +227,7 @@
                 <div id="wf_facebook" class="fr-widget fr-container fr_wf_facebook">
                     <a
                             class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                            href="http://www.facebook.com/FroontApp" target="_blank">
+                            href="" target="_blank">
                         <div class="fr-svg-inner">
                             <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
                         </div>
@@ -237,7 +237,7 @@
                 <div class="fr-widget fr-container fr_wf_youtube">
                     <a
                             class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                            href="http://www.facebook.com/FroontApp" target="_blank">
+                            href="" target="_blank">
                         <div class="fr-svg-inner">
                             <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
                         </div>
@@ -250,7 +250,7 @@
 
 <div id="container" class="fr-widget fr-container fr_container">
 </div>
-</div>
+
 <div class="fr-copyright-footer">
     <div class="fr-widget fr-container">
         <div class="fr-widget fr-text fr-wf fr-made-with-froont">
