--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div id="text_193" class="fr-widget fr-text fr-wf fr_text_193">
-                    <h6>Hi, and thanks for QuakeChat’s Privacy Policy.</h6>
+                    <h6>Hi, and thanks for visiting QuakeChat’s Privacy Policy.</h6>
                     <div class="section-divider bg-green"></div>
                     <div class="fr-text">
                         <h4>Privacy Policy</h4>
