--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div id="text_193" class="fr-widget fr-text fr-wf fr_text_193">
-                    <h6>Hi, and thanks for QuakeChat’s Terms of Use.</h6>
+                    <h6>Hi, and thanks for visiting QuakeChat’s Terms of Use.</h6>
                     <div class="section-divider bg-green"></div>
                     <div class="fr-text">
                         <h4>Terms of Use</h4>
