--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <a id="text_133" class="fr-widget fr-text fr-wf fr_button fr_text_133 fr-link"
-               href="https://itunes.apple.com/cn/app/growth/id1078807522?l=zh&ls=1&mt=8">
+               href="">
                 <div class="fr-text">
                     Download App
                 </div>
