--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       class="x-nav-js wf-montserrat-n7-active wf-montserrat-n4-active wf-roboto-n1-active wf-roboto-i1-active wf-roboto-n3-active wf-roboto-i3-active wf-roboto-n5-active wf-roboto-i5-active wf-roboto-n7-active wf-roboto-i7-active wf-roboto-n9-active wf-roboto-i9-active wf-roboto-i4-active wf-roboto-n4-active wf-active">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>web</title>
+    <title>Welcome to QuakeChat</title>
     <link rel="stylesheet" href="./files/style.19f5365.css">
     <link rel="stylesheet" href="./files/style.css">
     <link rel="stylesheet" href="./files/font-awesome/css/font-awesome.min.css">
