--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <a id="text_133" class="fr-widget fr-text fr-wf fr_button fr_text_133 fr-link"
-               href="">
+               href="https://itunes.apple.com/cn/app/quakechat/id1304970962">
                 <div class="fr-text">
                     Download App
                 </div>
@@ -281,7 +281,7 @@
             <div id="get_the_app" class="fr-widget fr-text fr-wf fr_text_dark_left fr_get_the_app">
                 <div class="fr-text">
                     <h4>Get The App</h4>
-                    <p><a href=""><img
+                    <p><a href="https://itunes.apple.com/cn/app/quakechat/id1304970962"><img
                             src="./files/apple.png" width="180" alt="Get it from Apple Store"
                             style="max-width:100%;"></a>
                     </p>
