--- a/index.html
+++ b/index.html
@@ -299,9 +299,8 @@
 
             <div id="wf_soc_icons" class="fr-widget fr-grid fr_wf_soc_icons">
                 <div id="wf_twitter" class="fr-widget fr-container fr_wf_twitter">
-                    <a
-                            class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                            href="" target="_blank">
+                    <a class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                            href="https://twitter.com/QuakeChat" target="_blank">
                         <div class="fr-svg-inner">
                             <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
                         </div>
@@ -309,9 +308,8 @@
                 </div>
 
                 <div id="wf_facebook" class="fr-widget fr-container fr_wf_facebook">
-                    <a
-                            class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                            href="" target="_blank">
+                    <a class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                            href="https://www.facebook.com/QuakeChat-183189308899521/?modal=admin_todo_tour" target="_blank">
                         <div class="fr-svg-inner">
                             <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
                         </div>
@@ -319,9 +317,8 @@
                 </div>
 
                 <div class="fr-widget fr-container fr_wf_youtube">
-                    <a
-                            class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                            href="" target="_blank">
+                    <a class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                            href="https://www.instagram.com/quakechat/" target="_blank">
                         <div class="fr-svg-inner">
                             <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
                         </div>
@@ -348,7 +345,7 @@
 <div class="fr-copyright-footer">
     <div class="fr-widget fr-container">
         <div class="fr-widget fr-text fr-wf fr-made-with-froont">
-            <a href="http://froont.com/" class="fr-text" target="_blank">
+            <a href="quakechat.kiwiinfo.com" class="fr-text" target="_blank">
                 MADE WITH <span class="heart">♥</span> AND <b>QUAKECHAT</b>
             </a>
         </div>
