--- a/index.html
+++ b/index.html
@@ -205,9 +205,8 @@
             <div id="f4_container_one" class="fr-widget fr-container fr_f4_container_one">
                 <div id="wf_soc_icons_4" class="fr-widget fr-grid fr_wf_soc_icons_4">
                     <div id="wf_twitter_3" class="fr-widget fr-container fr_wf_twitter_3">
-                        <a
-                                class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                                href="" target="_blank">
+                        <a class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                                href="https://twitter.com/QuakeChat" target="_blank">
                             <div class="fr-svg-inner">
                                 <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
                             </div>
@@ -215,9 +214,8 @@
                     </div>
 
                     <div id="wf_facebook_3" class="fr-widget fr-container fr_wf_facebook_3">
-                        <a
-                                class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                                href="" target="_blank">
+                        <a class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                                href="https://www.facebook.com/QuakeChat-183189308899521/?modal=admin_todo_tour" target="_blank">
                             <div class="fr-svg-inner">
                                 <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
                             </div>
@@ -225,9 +223,8 @@
                     </div>
 
                     <div id="wf_youtube_3" class="fr-widget fr-container fr_wf_youtube_3">
-                        <a
-                                class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                                href="" target="_blank">
+                        <a class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                                href="https://www.instagram.com/quakechat/" target="_blank">
                             <div class="fr-svg-inner">
                                 <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
                             </div>
