--- a/cardmakerapp-index.html
+++ b/cardmakerapp-index.html
@@ -316,7 +316,7 @@
     <div class="fr-widget fr-container">
         <div class="fr-widget fr-text fr-wf fr-made-with-froont">
             <a href="quakechat.kiwiinfo.com" class="fr-text" target="_blank">
-                MADE WITH <span class="heart">♥</span> AND <b>QUAKECHAT</b>
+                MADE WITH <span class="heart">♥</span> AND <b>CARDMAKER APP</b>
             </a>
         </div>
     </div>
