--- a/cardmakerapp-index.html
+++ b/cardmakerapp-index.html
@@ -76,7 +76,7 @@
         <div id="hd3_content" class="fr-widget fr-container fr_hd3_content">
             <div id="text_25" class="fr-widget fr-text fr-wf fr_text_bright_left fr_text_25">
                 <div class="fr-text">
-                    <h1>Card maker app</h1>
+                    <h1>Cardmaker App</h1>
                     <p>Let's make our own card and have fun!</p>
                 </div>
             </div>
